<resources>
    <string name="app_name">StepChamp</string>
    <string name="title_activity_firebase_ui">FirebaseUIActivity</string>
    <string name="welcomePrompt">Welcome to StepChamp!</string>
    <string name="sign_out">Sign out</string>
    <string name="menu_title">Menu</string>
    <string name="signInPrompt">Sign In</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Name:</string>
    <string name="totalsteps">Number of Steps</string>
    <string name="user_profile">Profile</string>
    <string name="daily">Steps Today:</string>
    <string name="monthly">Steps this month:</string>
    <string name="weekly">Steps this week:</string>
    <string name="yearly">Steps this year:</string>

</resources>
